[gd_scene load_steps=8 format=3 uid="uid://d3eg0qvebj3te"]

[ext_resource type="Texture2D" uid="uid://de1rfcicwaw5b" path="res://Playgrounds/KT/Assets/decorative_props.png" id="1_df6s7"]
[ext_resource type="Script" path="res://Props/Attack_up/Attack_up.gd" id="1_q3ahw"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_8xosy"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_bo858"]
radius = 12.0
height = 24.0

[sub_resource type="CircleShape2D" id="CircleShape2D_fgb26"]
radius = 122.016

[sub_resource type="AtlasTexture" id="AtlasTexture_1rt8c"]
atlas = ExtResource("1_df6s7")
region = Rect2(192, 180, 32, 30)

[sub_resource type="SpriteFrames" id="SpriteFrames_6vevq"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1rt8c")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="Attack_up" type="StaticBody2D"]
z_index = -1
y_sort_enabled = true
collision_layer = 17
collision_mask = 19
physics_material_override = SubResource("PhysicsMaterial_8xosy")
script = ExtResource("1_q3ahw")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_bo858")

[node name="Area2D" type="Area2D" parent="."]
y_sort_enabled = true
collision_layer = 17
collision_mask = 31

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
z_index = -1
position = Vector2(-4, -1)
shape = SubResource("CircleShape2D_fgb26")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Area2D"]
position = Vector2(5, -1)
sprite_frames = SubResource("SpriteFrames_6vevq")

[node name="Enough_Gold" type="Panel" parent="."]
offset_left = -139.0
offset_top = -113.0
offset_right = 188.0
offset_bottom = -73.0

[node name="Label" type="Label" parent="Enough_Gold"]
layout_mode = 0
offset_left = 3.0
offset_top = 1.0
offset_right = 277.0
offset_bottom = 37.0
text = "Press F to upgrade attack. ( -5 gold)"

[node name="Not_Enough_Gold" type="Panel" parent="."]
visible = false
offset_left = -136.0
offset_top = -111.0
offset_right = 142.0
offset_bottom = -71.0

[node name="Label" type="Label" parent="Not_Enough_Gold"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = "Not enough gold to upgrade attack. "

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
